--- a/assets/_servicios.scss
+++ b/assets/_servicios.scss
@@ -59,3 +59,13 @@
     font-size: 1.2rem;
 
 }
+
+@media screen and (max-width: 780px) { 
+    .botonera {
+        flex-direction: column;
+        gap: 1rem;
+       
+        justify-content: center;
+        align-items: center;
+    }
+}
