--- a/assets/styles.css
+++ b/assets/styles.css
@@ -62,6 +62,22 @@
   font-size: 1.2rem;
 }
 
+@media screen and (max-width: 780px) {
+  .botonera {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .fqa_titulo {
   color: var(--yellow-color);
 }
@@ -391,7 +407,7 @@ blockquote::before {
             align-items: flex-start;
   }
   .search input {
-    padding: 0.5rem 4rem 0.5rem 0.5rem;
+    padding: 0.5rem 3rem 0.5rem 0.5rem;
   }
 }
 
@@ -407,7 +423,7 @@ blockquote::before {
     gap: 0.5rem;
   }
   .search input {
-    padding: 0.5rem 4rem 0.5rem 0.5rem;
+    padding: 0.5rem 2rem 0.5rem 0.5rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
