--- a/assets/_servicios.scss
+++ b/assets/_servicios.scss
@@ -76,5 +76,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
+    align-items: center;
   }
 }
