--- a/assets/_servicios.scss
+++ b/assets/_servicios.scss
@@ -89,8 +89,17 @@
 
 .grid_servicios {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: .5rem;
     align-items: center;
   }
+
+  .serviciosCard_title {
+      font-size: 2rem;
+  }
+
+  .serviciosCard_info {
+      font-size: .7rem;
+  }
+
 }
