--- a/assets/styles.css
+++ b/assets/styles.css
@@ -110,12 +110,18 @@
   .grid_servicios {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1rem;
+    -ms-grid-columns: (minmax(220px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: .5rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .serviciosCard_title {
+    font-size: 2rem;
+  }
+  .serviciosCard_info {
+    font-size: .7rem;
   }
 }
 
