--- a/assets/_contacto.scss
+++ b/assets/_contacto.scss
@@ -21,8 +21,7 @@
     textarea {
       width: 100%;
       padding: 1rem;
-      border-radius: 10px;
-      border: 2px solid #fff;
+      border-bottom: 2px solid #fff;
       outline: none;
       background-color: transparent;
       margin-bottom: 1rem;
@@ -35,7 +34,7 @@
     flex-direction: column;
   
     i {
-      color: var(--colorOrange);
+      color: var(--green-color);
       margin-right: 0.5rem;
     }
   }
@@ -69,13 +68,12 @@
   
   .contactButton {
     display: inline-block;
-    background-color: var(--colorOrange);
+    background-color: var(--green-color);
     color: #fff;
     text-align: center;
     border-radius: 5px;
     padding: 0.3rem 3rem;
     margin: 0 auto;
-    font-size: var(--mediumSize);
     border: none;
     cursor: pointer;
   }
