--- a/assets/styles.css
+++ b/assets/styles.css
@@ -110,8 +110,8 @@
   .grid_servicios {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (minmax(220px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    -ms-grid-columns: (minmax(240px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: .5rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -149,14 +149,27 @@
   padding: 2rem;
 }
 
+.flex_form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
 .contactoInput input,
 .contactoInput textarea {
   width: 100%;
   padding: 1rem;
+  border: 0;
   border-bottom: 2px solid #fff;
   outline: none;
   background-color: transparent;
   margin-bottom: 1rem;
+}
+
+.contactoInput input:focus {
+  outline: none;
+  border: none;
 }
 
 .contact_list_row {
