--- a/assets/_contacto.scss
+++ b/assets/_contacto.scss
@@ -1,5 +1,22 @@
 .contacto {
-    margin-top: 5rem;
+    margin-top: 4rem;
+    
+  }
+
+  .contactoBox {
+    padding: 0 3rem;
+    background-color: #0F0F0F;
+    border-radius: 8px;
+    margin-bottom: 6rem;
+  }
+
+  .contactoBoxInside {
+    padding: 1.5rem;
+  }
+
+
+  .wrapper_left_text {
+    max-width: 40ch;
   }
   
   .wrapper_right {
