--- a/assets/_servicios.scss
+++ b/assets/_servicios.scss
@@ -3,87 +3,34 @@
     padding-bottom: 5rem;
 }
 
-.botonera {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 3rem;
-}
-
-.btn_botonera {
-    color: #FFF;
-    margin-left: .5rem;
-
-    display: inline-block;
-    padding: .5rem 1rem;
-    background-color: inherit;
-    border-color: #FFF;
-    border-radius: 66px;
-    font-weight: 900;
-    font-size: 1.2rem;
-    
-}
-
-.btn_botonera:hover {
-    background-color: var(--green-color);
-    border-color: var(--bg-color);
-    color: #FFF;
-}
-
-.grid_servicios {
+.gridServicios {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
   }
 
 
-.serviciosCard {
+.cardsText_cardServicios {
     box-shadow: 0px 4px 20px 4px rgba(255, 255, 255, 0.1);
     border-radius: 8px;
-    padding: 2.5rem;
+    padding: 2rem;
 }
 
-.serviciosCard_title {
-    color: var(--yellow-color);
-    font-size: 3rem;
+.gridCenter {
+    display: grid;
+    place-items: center;
 }
 
-.serviciosCard_subTitleTop {
-    opacity: .6;
-}
-
-.cardInside ul {
-    padding-left: 0;
-}
-
-.serviciosCard_button {
+.textCardServicios {
     color: #FFF;
-    margin: 0 auto;
-    display: block;
-    padding: .5rem 1rem;
-    background-color: var(--green-color);
-    border-radius: 66px;
-    font-weight: 900;
-    font-size: 1.2rem;
-
+    font-size: 1.7rem;
 }
 
-.lista_servicios {
-    list-style-type: disc;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.iconServicios {
+    color: var(--yellow-color);
+   margin-bottom: 3rem;
 }
 
-@media screen and (max-width: 780px) { 
-    .botonera {
-        flex-direction: column;
-        gap: 1rem;
-       
-        justify-content: center;
-        align-items: center;
-    }
-}
 
 @media screen and (max-width: 570px) {
 
