--- a/assets/_proyectos.scss
+++ b/assets/_proyectos.scss
@@ -1,3 +1,46 @@
 .proyectos {
     padding-bottom: 5rem;
+    max-width: 1300px;
 }
+
+.grid_proyectos {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: .5rem;
+  }
+
+
+.card_proyectos {
+    box-shadow: 0px 4px 20px 4px rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+
+}
+
+
+.propiedadesCard_img img{
+    border-radius: 8px;
+}
+
+.proyectosCard_button {
+    color: #FFF;
+    margin: 0 auto;
+    display: block;
+    padding: .5rem 1rem;
+    background-color: var(--green-color);
+    border-radius: 66px;
+    font-weight: 900;
+    font-size: 1.2rem;
+    
+
+}
+
+
+
+
+
+
