--- a/assets/_servicios.scss
+++ b/assets/_servicios.scss
@@ -31,6 +31,13 @@
    margin-bottom: 3rem;
 }
 
+.gridServiciosCenter {
+    display: flex;  
+    gap: 1rem;
+    justify-content: center;
+    
+}
+
 
 @media screen and (max-width: 570px) {
 
