--- a/assets/_proyectos.scss
+++ b/assets/_proyectos.scss
@@ -14,6 +14,7 @@
     box-shadow: 0px 4px 20px 4px rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 1rem;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
