--- a/assets/styles.css
+++ b/assets/styles.css
@@ -157,7 +157,6 @@
 
 .contactoForm {
   width: 100%;
-  padding: 2rem;
 }
 
 .flex_form {
@@ -165,6 +164,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  gap: 1rem;
 }
 
 .contactoInput input,
@@ -176,6 +176,31 @@
   outline: none;
   background-color: transparent;
   margin-bottom: 1rem;
+  color: white;
+}
+
+.contactoInput ::-webkit-input-placeholder {
+  color: white;
+}
+
+.contactoInput :-ms-input-placeholder {
+  color: white;
+}
+
+.contactoInput ::-ms-input-placeholder {
+  color: white;
+}
+
+.contactoInput ::placeholder {
+  color: white;
+}
+
+.contactoInput input[type="checkbox"]:checked {
+  border: 1px solid var(--green-color);
+}
+
+.contactoInput input:checked {
+  border: 1px solid var(--green-color);
 }
 
 .contactoInput input:focus {
@@ -200,30 +225,7 @@
 }
 
 .contact_list_row_contacto p {
-  margin: 2.5rem 0;
-}
-
-.contact_item_subTitle {
-  font-size: 1.5rem;
-  color: var(--colorBlue);
-  position: relative;
-  line-height: 1.3;
-  margin-bottom: 1rem;
-}
-
-.testimoniosContacto {
-  background-color: #f3f3f3;
-  padding: 2rem 2rem 3rem 2rem;
-}
-
-.testimoniosCard {
-  background-color: #fff;
-  padding: 1rem;
-}
-
-.testimoniosCard h3 {
-  color: var(--colorBlue);
-  text-align: center;
+  margin: 2rem 0;
 }
 
 .contactButton {
@@ -236,6 +238,7 @@
   margin: 0 auto;
   border: none;
   cursor: pointer;
+  margin: auto;
 }
 
 .paraCemento {
