--- a/assets/_cemento.scss
+++ b/assets/_cemento.scss
@@ -20,6 +20,11 @@
   height:0;
   margin-bottom: 4rem;
 }
+
+iframe { width: 1120px;
+  height: 630px;
+
+}
 .videoResponsive iframe{
   left:0;
   top:0;
@@ -35,6 +40,11 @@
   .contenedorFlexColumn {
     display: flex;
     flex-direction: column;
+  }
+
+  iframe { width: 300px;
+    height: 150px;
+  
   }
 
 }
