--- a/assets/_proyectos.scss
+++ b/assets/_proyectos.scss
@@ -43,9 +43,18 @@
 
     .grid_proyectos {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         align-items: center;
       }
+
+      .card_proyectos {
+        
+        padding: .5rem;
+        margin: 0;
+       
+        
+    
+    }
     
      
     
